--- a/templates/payment.html
+++ b/templates/payment.html
@@ -29,6 +29,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js"></script>
+    <script>'{{.QrcodeJs}}'</script>
     <script>
         // Generate QR code
         var qr = qrcode(0, 'M');
